[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum="0.8"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tower-http = {version = "0.6", features = ["full"]}
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "json"] }
dotenvy = "0.15"
