[package]
name = "ironveil"
version = "0.1.0"
edition = "2024"

[dependencies]
boringtun = "0.6"
tun = { version = "0.6", features = ["async"] }
tokio = { version = "1", features = ["full"] }
x25519-dalek = "=2.0.0-rc.3"
rand = "0.8"
zeroize = "1"
base64 = "0.22.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
libc = "0.2"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "sandbox"
path = "src/sandbox/sandbox.rs"

[[bin]]
name = "keypair"
path = "src/sandbox/keypair.rs"
